.kube/frontend.yml
apiVersion: v1
kind: Service
metadata:
  namespace: x5-lot14
  name: frontend-service
spec:
  type: NodePort
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
    nodePort: 31000
  selector:
    app: frontend

---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: x5-lot14
  name: frontend-deploy
  labels:
    app: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      imagePullSecrets:
        - name: myregistry 
      containers:
      - name: frontend
        image: gitlab.artw.ru:5050/artw/tenders/x5-lot-14:frontend-latest
        command: ["nginx", "-g", "daemon off;"]
        ports:
        - containerPort: 80
        imagePullPolicy: Always
